ensure lengthy add-on names do not get truncated on meet the devs page (bug 696074)

--- a/media/css/impala/site.less
+++ b/media/css/impala/site.less
@@ -19,9 +19,13 @@ body {
     margin: 0 auto;
     position: relative;
     min-height: @page-min-height;
-    header h2,
-    header h3 {
-        margin-bottom: 16px;
+    header {
+        &.hero {
+            width: 720px;
+        }
+        h2, h3 {
+            margin-bottom: 16px;
+        }
     }
 }
 
