--- a/media/css/impala/users.less
+++ b/media/css/impala/users.less
@@ -97,6 +97,12 @@ img.icon {
             margin: 1em 0;
         }
     }
+    #addon-side {
+        padding-top: 2.5em;
+        img {
+            left: -3px;
+        }
+    }
     #profile-actions {
         float: right;
     }
@@ -201,6 +207,10 @@ img.icon {
 }
 
 .html-rtl.meet {
+    #addon-side img {
+        left: auto;
+        right: -3px;
+    }
     #profile-actions {
         float: left;
     }
